# Crapssim-EVO

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  NOVA_AGENT_ENTRYPOINT.yaml  README.md  pyproject.toml  requirements.txt  ruff.toml  yaml.py
.github/workflows/: lint.yml
cli/: evolve.py  export_bundle.py  submit_job.py
configs/: example.yml
docs/: ADAPTIVE_GUIDE.md  ARCHITECTURE.md  BUNDLE_SPEC.md  CONFIG_GUIDE.md  CONVERGENCE_GUIDE.md  CSC_INTERFACE.md  CSC_SNAPSHOT.yaml  DATA_CONTRACTS.md  DESIGN_PHILOSOPHY.md  DEV_ROADMAP.md  DNA_LINEAGE.md  EVOLUTION_GUIDE.md  EVO_BIBLE.md  FITNESS_GUIDE.md  INTEROP_GUIDE.md  OVERVIEW.md  PACKAGING_GUIDE.md  PHASE_ROADMAP.md  PIPELINE_FLOW.md  README.md  ROADMAP.md
evo/: __init__.py  config.py  dna.py  evolver.py  fitness.py  logging.py  models.py  mutation.py  population.py  rng.py  selection.py
evo/analysis/: __init__.py  convergence.py  reader.py  reporters.py  run_convergence.py
evo/interop/: __init__.py  lane_file.py  lane_http.py  trigger.py  types.py  util.py
evo/io/: __init__.py  bundles.py  export.py  report_parser.py
evo/metrics/: __init__.py  diversity.py  los.py  registry.py
evo/policy/: __init__.py  adaptive.py
examples/: README.md
tests/: test_adaptive_policy.py  test_bundles.py  test_bundles_determinism.py  test_config_loader.py  test_convergence.py  test_dna.py  test_elite_preserve.py  test_evolver.py  test_evolver_determinism.py  test_fitness.py  test_lane_file_roundtrip.py  test_lane_http_roundtrip.py  test_logging.py  test_manifest_adaptive.py  test_opslog_and_subseeds.py  test_rng.py  test_sanity.py  test_trigger_interface.py
