[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crapssim-evo"
version = "0.0.0"
description = "Standalone evolutionary engine for CrapsSim strategies (siloed; bundle-in/bundle-out)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Rey", email = "devnull@example.com" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.5.0", "black>=24.0.0"]
runtime = ["leap-ec>=1.0.0", "numpy>=1.26", "pandas>=2.1", "pyyaml>=6.0"]

[project.scripts]
crapssim-evo = "cli.evolve:main"

[tool.setuptools]
packages = ["evo", "cli"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
ignore = []
