[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crapssim-evo"
version = "0.0.1"
description = "Standalone evolutionary engine for CrapsSim strategies (siloed; bundle-in/bundle-out)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Rey", email = "devnull@example.com" }]
license = { text = "MIT" }
# Keep core deps empty during pre-spec phases to avoid heavy installs
dependencies = []

[project.optional-dependencies]
# Install with: pip install -e .[runtime]
runtime = [
  "leap-ec>=1.0.0",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyyaml>=6.0"
]
# Install with: pip install -e .[dev]
dev = [
  "pytest>=7.0",
  "ruff>=0.5.0",
  "black>=24.0.0",
  "build>=1.2.1"
]

[project.scripts]
crapssim-evo = "cli.evolve:main"

[tool.setuptools]
# Explicit list for reliability
packages = ["evo", "evo.io", "cli"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
ignore = []
